deploy/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auto-redirect-uris
spec:
  replicas: 1
  selector:
    matchLabels:
      name: auto-redirect-uris
  template:
    metadata:
      labels:
        name: auto-redirect-uris
    spec:
      serviceAccountName: auto-redirect-uris
      containers:
        - name: auto-redirect-uris
          # Replace this with the built image name
          image: REPLACE_IMAGE
          command:
          - auto-redirect-uris
          imagePullPolicy: Always
