deploy/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simple-fanout-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /foo
        backend:
          serviceName: service1
          servicePort: 4200
      - path: /bar
        backend:
          serviceName: service2
          servicePort: 8080
  - host: bar.foo.com
    http:
      paths:
        - path: /foo
          backend:
            serviceName: service1
            servicePort: 4200
        - path: /bar
          backend:
            serviceName: service2
            servicePort: 8080
  - host: bazz.foo.com
    http:
      paths:
        - path: /foo
          backend:
            serviceName: service1
            servicePort: 4200
        - path: /bar
          backend:
            serviceName: service2
            servicePort: 8080
